--- a/css/style.css
+++ b/css/style.css
@@ -325,3 +325,63 @@ article {
     width: 90%;
   }
 }
+
+div.animate {
+  text-transform: uppercase;
+  letter-spacing: 2pt;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  border: 4px double rgba(255, 255, 255, 0.25);
+  border-width: 4px 0;
+  padding: 1.5em 0em;
+  width: auto;
+  margin: 20px auto 20px auto;
+}
+
+div.animate h4 {
+  color: var(--primary-color);
+  font-size: 20pt;
+}
+
+@media only screen and (max-width: 1024px) {
+  div.animate h4 {
+    font-size: 10pt;
+  }
+}
+
+div.animate span {
+  font: 700 40pt "Oswald", sans-serif;
+  letter-spacing: 0;
+  padding: .25em 0 .325em;
+  margin: auto;
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
+  /* Clip Background Image */
+  background: url(https://images.pexels.com/photos/2726986/pexels-photo-2726986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
+  /* Animate Background Image */
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: aitf 80s linear infinite;
+  /* Activate hardware acceleration for smoother animations */
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+}
+
+/* Animate Background Image */
+@-webkit-keyframes aitf {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
