--- a/style.scss
+++ b/style.scss
@@ -291,3 +291,57 @@ article {
   }
 }
 // end navbar
+
+// index page animation
+div.animate {
+	text-transform: uppercase;
+	letter-spacing: 2pt;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+	border: 4px double rgba(255,255,255,.25);
+	border-width: 4px 0;
+  padding: 1.5em 0em;
+	width: auto;
+  margin: 20px auto 20px auto;
+  h4{
+    color: var(--primary-color);
+    font-size:20pt;
+    @include small{
+      font-size: 10pt;
+    }
+  }
+  span {
+
+  	font: 700 40pt "Oswald", sans-serif;
+  	letter-spacing: 0;
+    padding: .25em 0 .325em;
+	  margin: auto;
+  	text-shadow: 0 0 80px rgba(255,255,255,.5);
+
+/* Clip Background Image */
+
+	  background: url(https://images.pexels.com/photos/2726986/pexels-photo-2726986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) repeat-y;
+	  -webkit-background-clip: text;
+	  background-clip: text;
+
+/* Animate Background Image */
+
+	  -webkit-text-fill-color: transparent;
+	  -webkit-animation: aitf 80s linear infinite;
+
+/* Activate hardware acceleration for smoother animations */
+
+	  -webkit-transform: translate3d(0,0,0);
+	  -webkit-backface-visibility: hidden;
+
+  }
+}
+
+/* Animate Background Image */
+
+@-webkit-keyframes aitf {
+	0% { background-position: 0% 50%; }
+	100% { background-position: 100% 50%; }
+}
