--- a/css/style.css
+++ b/css/style.css
@@ -76,19 +76,19 @@ section.spacer {
 .header {
   position: absolute;
   top: 10px;
-  right: 20px;
+  right: 50%;
 }
 
 .header .moon, .header .sun {
   width: 34px;
-  cursor: pointer;
-  -webkit-transition: .5s all ease-in-out;
-  transition: .5s all ease-in-out;
+  cursor: crosshair;
+  -webkit-transition: 1s all ease-in-out;
+  transition: 1s all ease-in-out;
 }
 
 .header .sun:hover {
-  -webkit-animation: sun_rotate 1s infinite;
-          animation: sun_rotate 1s infinite;
+  -webkit-animation: sun_rotate 2s infinite;
+          animation: sun_rotate 2s infinite;
 }
 
 .header .moon:hover {
@@ -354,7 +354,7 @@ div.animate h4 {
 
 @media only screen and (max-width: 1024px) {
   div.animate h4 {
-    font-size: 10pt;
+    font-size: 11pt;
   }
 }
 
