--- a/style.scss
+++ b/style.scss
@@ -469,7 +469,7 @@ div.animate {
 	width: auto;
   margin: 20px auto 20px auto;
   h4{
-    color: var(--primary-color);
+    color: #262626;
     font-size:20pt;
     @include small{
       font-size: 10pt;
