--- a/style.scss
+++ b/style.scss
@@ -5,19 +5,19 @@
 }
 // Darkmode Selector
 :root {
-  --primary-color: #1B1E24;
-  --secondary-color: #1B1E24;
-  --font-color: #1B1E24;
-  --bg-color: #fff;
-  --heading-color: #1B1E24;
-}
-
-[data-theme="dark"] {
   --primary-color: #fff;
   --secondary-color: #fff;
   --font-color: #fff;
   --bg-color: #1B1E24;
   --heading-color: #fff;
+}
+
+[data-theme="dark"] {
+  --primary-color: #1B1E24;
+  --secondary-color: #1B1E24;
+  --font-color: #1B1E24;
+  --bg-color: #fff;
+  --heading-color: #1B1E24;
 }
 
 body {
@@ -88,13 +88,14 @@ section.spacer{
     bottom:-20%;
     left:120%;
     font-size:12pt;
+    color:white;
   }
   p.daymode{
     position:absolute;
     bottom:-20%;
     left:120%;
     font-size:12pt;
-    color:white;
+    color:black;
   }
 }
 
@@ -277,6 +278,7 @@ nav {
 }
 // Animation
 .birdcontent {
+  margin-top:70px;
   z-index: 1;
   width:100%;
 	position: relative;
