--- a/style.scss
+++ b/style.scss
@@ -288,8 +288,8 @@ nav {
 	justify-content: center;
 	// min-height: 100vh;
 	min-height: 35rem;
-	background-image: linear-gradient(to bottom,  rgba(255,168,76,0.6) 0%,rgba(255,123,13,0.6) 100%), url('https://images.unsplash.com/photo-1446824505046-e43605ffb17f');
-	background-blend-mode: soft-light;
+	background-image:linear-gradient(to bottom,  rgba(3, 3, 3, 0.6) 0%,rgba(255, 115, 0, 0.87) 100%), url('../img/spira.jpg');
+	background-blend-mode: darken;
 	background-size: cover;
 	background-position: center center;
 	padding: 2rem;
@@ -465,16 +465,17 @@ div.animate {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-	border: 4px double rgba(255,255,255,.25);
+	border: 4px double rgba(255, 255, 255, 0.671);
 	border-width: 4px 0;
   padding: 1.5em 0em;
 	width: auto;
   margin: 20px auto 20px auto;
+  z-index: 10;
   h4{
-    color: #262626;
+    color: rgb(248, 248, 248);
     font-size:20pt;
     @include small{
-      font-size: 10pt;
+      font-size: 18pt;
     }
   }
   span {
@@ -487,14 +488,14 @@ div.animate {
 
 /* Clip Background Image */
 
-	  background: url(https://images.pexels.com/photos/2726986/pexels-photo-2726986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) repeat-y;
+	  background: url(../img/Harvey.jpg) repeat-y;
 	  -webkit-background-clip: text;
 	  background-clip: text;
 
 /* Animate Background Image */
 
 	  -webkit-text-fill-color: transparent;
-	  -webkit-animation: aitf 80s linear infinite;
+	  -webkit-animation: aitf 10s linear infinite;
 
 /* Activate hardware acceleration for smoother animations */
 
