--- a/css/loading.css
+++ b/css/loading.css
@@ -37,6 +37,19 @@ canvas.playing:hover {
   cursor: none;
 }
 
+@media only screen and (max-width: 1024px) {
+  canvas {
+    width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: auto;
+  }
+}
+
 .controls {
   margin-top: 2.5em;
   text-align: center;
@@ -77,6 +90,13 @@ header .not-supported {
 
 .button + .button {
   margin-left: 0.33em;
+}
+
+@media only screen and (max-width: 1024px) {
+  .button {
+    width: 90%;
+    margin: auto;
+  }
 }
 
 .status {
