--- a/css/style.css
+++ b/css/style.css
@@ -62,25 +62,29 @@ section.spacer {
   border-radius: 15px;
 }
 
+.container a:hover {
+  font-size: 21pt;
+}
+
 @keyframes move {
   from {
     margin-left: 100%;
-    width: 300%;
+    width: 100%;
   }
   to {
     margin-left: 0%;
-    width: 100%;
+    width: 11%;
   }
 }
 
 @-webkit-keyframes move {
   from {
     margin-left: 100%;
-    width: 300%;
+    width: 100%;
   }
   to {
     margin-left: 0%;
-    width: 100%;
+    width: 50%;
   }
 }
 
