--- a/style.scss
+++ b/style.scss
@@ -52,29 +52,33 @@ section.spacer{
     padding:20pt;
     border:3px var(--primary-color) solid;
     border-radius: 15px;
+
+    &:hover{
+      font-size:21pt;
+    }
   }
   
   @keyframes move {
     from {
       margin-left: 100%;
-      width: 300%; 
+      width: 100%; 
     }
   
     to {
       margin-left: 0%;
-      width: 100%;
+      width: 11%;
     }
   }
               
   @-webkit-keyframes move {
     from {
       margin-left: 100%;
-      width: 300%; 
+      width: 100%; 
     }
   
     to {
       margin-left: 0%;
-      width: 100%;
+      width: 50%;
     }
   }
   .content h1{
