--- a/style.scss
+++ b/style.scss
@@ -322,7 +322,7 @@ nav {
 .birdcontent {
   margin-top:70px;
   z-index: 1;
-  width:100%;
+  width:100rem;
 	position: relative;
 	overflow: hidden;
 	display: flex;
@@ -333,12 +333,15 @@ nav {
 	background-image:linear-gradient(to bottom,  rgba(3, 3, 3, 0.6) 0%,rgba(255, 115, 0, 0.87) 100%), url('../img/spira.jpg');
 	background-blend-mode: darken;
 	background-size: cover;
-	background-position: center center;
-	padding: 2rem;
+	background-position: top center;
+  padding: 2rem;
+  @include small{
+    width:90%;
+  }
 }
 
 .bird {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells-new.svg);
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells-new.svg);
 	background-size: auto 100%;
 	width: 88px;
 	height: 125px;
